--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,24 +1,22 @@
-<h2>About Compass</h2>
-<p>Compass has been designed with something very specific in mind: to be a simple and elegant personal landing page.</p>
+<h2>Kontaktní údaje</h2>
+<p>
 
-<h2>Features</h2>
-<ul>
-  <li>Responsive design</li>
-  <li>Mobile friendly</li>
-  <li>Easy deployment to <a href="https://pages.github.com/">GitHub Pages</a></li>
-</ul>
+  Meijin, a.s.,]  IČ: 099 14 471, se sídlem Praha, Nové Město, Na Moráni 345/11, PSČ 128 00
+  <br>
+  Zapsaná v obchodním rejstříku vedeném Městským soudem v Praze, v oddíle B, vložka 26080,
+  <br>
+  <a href="mailto:Info@meijin.cz">Info@meijin.cz</a>, tel. +420 602 490 978
 
-<p>For more information, including setup and configuration instructions, bug reports or feature requests head over to <a href="https://github.com/excentris/compass">GitHub</a>.</p>
+
+</p>
+
 
 <hr />
 
 <ul class="fa-ul main-list">
-  <li class="main-list-item">
-    <span class="fa fa-github fa-lg main-list-item-icon"></span>
-    <a href="https://github.com/excentris/compass">GitHub Repository</a>
-  </li>
+
   <li class="main-list-item">
     <span class="fa fa-user fa-lg main-list-item-icon"></span>
-    <a href="http://excentris.net">The Author</a>
+    <a href="mailto:Info@meijin.cz">Kontaktujte  nás</a>
   </li>
 </ul>
