--- a/_includes/content.html
+++ b/_includes/content.html
@@ -7,7 +7,7 @@
   Zapsaná v obchodním rejstříku vedeném Městským soudem v Praze, v oddíle B, vložka 26080,
   </p>
   <p>
-  <a href="mailto:Info@meijin.cz">Info@meijin.cz</a>, tel. +420 602 490 978
+   tel. +420 602 490 978
 </p>
 
 
