--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,13 +2,15 @@
 <html>
   {% include head.html %}
   <body>
-  <h2>{{ site.data.nav.docs_list_title }}</h2>
-  <ul>
-    {% for item in site.data.nav.docs %}
-    <li><a href="{{ item.url }}">{{ item.title }}</a></li>
-    {% endfor %}
-  </ul>
-  {{ content }}
+  <nav>
 
+    <h2>{{ site.data.nav.docs_list_title }}</h2>
+    <ul>
+      {% for item in site.data.nav.docs %}
+      <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+      {% endfor %}
+    </ul>
+  </nav>
+  {{ content }}
   </body>
 </html>
