--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,5 +42,5 @@
   {% endif %}
 
 <meta name="theme-color" content="#F1EED9">
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
