--- a/_includes/content.html
+++ b/_includes/content.html
@@ -3,7 +3,7 @@
       <h2>Kontaktní údaje</h2>
       <p>
 
-        Meijin, a.s.,]  IČ: 099 14 471, se sídlem Praha, Nové Město, Na Moráni 345/11, PSČ 128 00
+        Meijin, a.s., IČ: 099 14 471, se sídlem Praha, Nové Město, Na Moráni 345/11, PSČ 128 00
       </p>
       <p>
         Zapsaná v obchodním rejstříku vedeném Městským soudem v Praze, v oddíle B, vložka 26080,
