--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,4 +1,7 @@
-<div class="wrapper">
+<div class="wrapper text-center">
 <hr>
-  Created by <a href="https://appfactory.cz">Vojtěch Nekvapil</a>
+  Created by <a href="https://appfactory.cz">Vojtěch Nekvapil</a> &copy; <span id="spanYear"></span>
+  <script>
+    $('#spanYear').html(new Date().getFullYear());
+  </script>
 </div>
