--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,5 +42,5 @@
   {% endif %}
 
 <meta name="theme-color" content="#F1EED9">
-
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
 </head>
