--- a/_includes/content.html
+++ b/_includes/content.html
@@ -8,18 +8,19 @@
       <p>
         Zapsaná v obchodním rejstříku vedeném Městským soudem v Praze, v oddíle B, vložka 26080,
       </p>
-      <p>
-        tel. +420 602 490 978
-      </p>
-
 
       <hr />
 
       <ul class="fa-ul main-list">
         <li class="main-list-item">
-          <span class="fa fa-user fa-lg main-list-item-icon"></span>
-          <a href="mailto:Info@meijin.cz">Kontaktujte  nás</a>
+          <span class="fa fa-envelope fa-lg main-list-item-icon"></span>
+          <a href="mailto:info@meijin.cz">info@meijin.cz</a>
         </li>
+
+          <li class="main-list-item">
+              <span class="fa fa-phone fa-lg main-list-item-icon"></span>
+              +420 602 490 978
+          </li>
 <!--          {% assign post_count=site.posts | size %}-->
 <!--          {% if post_count > 0 %}-->
 <!--          <h5>Pozvánky na valnou hromadu</h5>-->
