--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,6 +1,6 @@
 <div class="wrapper text-center">
 <hr>
-  Created by <a href="https://appfactory.cz">Vojtěch Nekvapil</a> &copy; <span id="spanYear"></span>
+  Created by <a href="https://appfactory.cz" target="_blank">Vojtěch Nekvapil</a> &copy; <span id="spanYear"></span>
   <script>
     $('#spanYear').html(new Date().getFullYear());
   </script>
