--- a/_includes/content.html
+++ b/_includes/content.html
@@ -21,6 +21,12 @@
               <span class="fa fa-phone fa-lg main-list-item-icon"></span>
               +420 602 490 978
           </li>
+
+
+          <li class="main-list-item">
+              <span class="fa fa-globe fa-lg main-list-item-icon"></span>
+              <a href="{{site.mapa}}" target="_blank">Na Moráni 345/11, Praha 2</a>
+          </li>
 <!--          {% assign post_count=site.posts | size %}-->
 <!--          {% if post_count > 0 %}-->
 <!--          <h5>Pozvánky na valnou hromadu</h5>-->
