--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,46 +1,53 @@
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ site.company }}</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="apple-touch-icon" href="{{ site.baseurl }}{{ site.compass.logo }}"/>
-  <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ site.url }}{{ site.baseurl }}/favicon.ico" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ site.company }}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!--    <link rel="apple-touch-icon" href="{{ site.baseurl }}{{ site.compass.logo }}"/>-->
+    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64"
+          href="{{ site.url }}{{ site.baseurl }}/faviconm.ico"/>
 
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/normalize.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 
-  <link rel="canonical" href="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
 
-  <meta name="author" content="{{ site.compass.author }}">
-  <meta name="description" content="{{ site.compass.tagline }}"/>
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/normalize.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <!--  <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
-  <!-- Open Graph tags -->
-  <meta property="og:type" content="website"/>
-  <meta property="og:title" content="{{ site.compass.tagline }}"/>
-  <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}"/>
-  <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}{{ site.compass.logo }}"/>
-  <meta property="og:description" content="{{ site.compass.description }}"/>
-  <meta property="og:site_name" content="{{ site.compass.tagline }}">
 
-  <!-- Twitter Card tags -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="{{ site.compass.tagline }}">
-  {% if site.twitter.site %}
-  <meta name="twitter:site" content="{{ site.twitter.site }}">
-  {% endif %}
-  {% if site.twitter.creator %}
-  <meta name="twitter:creator" content="{{ site.twitter.creator }}">
-  {% endif %}
-  <meta name="twitter:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
-  <meta name="twitter:description" content="{{ site.compass.description }}">
-  <meta name="twitter:image:src" content="{{ site.url }}{{ site.baseurl }}{{ site.compass.logo }}">
+    <link rel="canonical" href="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
 
-  {% if site.compass.include_analytics %}
-  {% include analytics.html %}
-  {% endif %}
+    <meta name="author" content="{{ site.compass.author }}">
+    <meta name="description" content="{{ site.compass.tagline }}"/>
 
-<meta name="theme-color" content="#F1EED9">
-  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
+    <!-- Open Graph tags -->
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="{{ site.compass.tagline }}"/>
+    <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}"/>
+    <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}{{ site.compass.logo }}"/>
+    <meta property="og:description" content="{{ site.compass.description }}"/>
+    <meta property="og:site_name" content="{{ site.compass.tagline }}">
+
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="{{ site.compass.tagline }}">
+    {% if site.twitter.site %}
+    <meta name="twitter:site" content="{{ site.twitter.site }}">
+    {% endif %}
+    {% if site.twitter.creator %}
+    <meta name="twitter:creator" content="{{ site.twitter.creator }}">
+    {% endif %}
+    <meta name="twitter:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
+    <meta name="twitter:description" content="{{ site.compass.description }}">
+    <meta name="twitter:image:src" content="{{ site.url }}{{ site.baseurl }}{{ site.compass.logo }}">
+
+    {% if site.compass.include_analytics %}
+    {% include analytics.html %}
+    {% endif %}
+
+    <meta name="theme-color" content="#F1EED9">
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
 </head>
