--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,7 @@ $anchor-text-color: #CE534D;
 $background-color: #F1EED9;
 
 body {
-	font-family: 'Vollkorn', serif;
+	font-family: 'Montserrat', sans-serif;
 	color: $text-color;
 	background-color: $background-color;
 }
@@ -60,14 +60,14 @@ since it must be aligned with the content */
 }
 
 .logo {
-	width: 96px;
-	height: 96px;
+	width: 350px;
+	height: 175px;
 	display: inline-block;
+	background: transparent;
 	background-size: cover;
-	border-radius: 50%;
 	-moz-border-radius: 50%;
 	border: 2px solid $background-color;
-	box-shadow: 0 0 0 3px $text-color;
+	box-shadow: 0 0 0 0px $text-color;
 }
 
 /*** author ***/
