--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,4 +50,5 @@
 
     <meta name="theme-color" content="#F1EED9">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 </head>
